# ncc

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
.cargo/: config.toml
.misc/: Makefile  README.m4  package-readme.md
doc/: README.md  alsa.md  colors.html  keycodes.md
examples/: README.md
examples/flkey/: README.md  default-faders.toml  default-pads.toml  default-pedal.toml  default-pots.toml  example-faders.toml  example-pads.toml  example-pedal.toml  example-pots.toml
examples/flkey-mini/: README.md  default-pads.toml  default-pedal.toml  default-pots.toml  example-pads.toml  example-pedal.toml  example-pots.toml
examples/flkey-mini/colors/: 1.toml  2.toml  3.toml  4.toml  5.toml  6.toml  7.toml  8.toml
examples/flkey/colors/: 1.toml  2.toml  3.toml  4.toml  (+4 more)
examples/launchkey-mini-mk3/: README.md  default-pads.toml  default-pedal.toml  default-pots.toml  example-pads.toml  example-pedal.toml  example-pots.toml
examples/launchkey-mk3/: README.md  default-faders.toml  default-pads.toml  default-pedal.toml  default-pots.toml  example-faders.toml  example-pads.toml  example-pedal.toml  example-pots.toml
examples/launchpad-mini-mk3/: README.md  blank.toml  example.toml
examples/launchpad-x/: README.md  blank.toml  example.toml
src/: ansi.rs  args.rs  common.rs  error.rs  main.rs
src/controls/: def.rs  mod.rs  pad.rs  pad_fader.rs  pedal.rs  pot.rs
src/launchkey/: common.rs  mod.rs
src/launchpad/: common.rs  mod.rs
src/parse/: bounded.rs  config.rs  error.rs  mod.rs  primitive.rs  slice.rs  with_error.rs  wrap.rs
tests/: verify-syx.rs
(+88 files in other folders)
